# spin-test

./: .spin  CONTRIBUTING.md  LICENSE  README.md  dune-project  esy.json  ls.opam
.github/workflows/: release.yml
esy.lock/: index.json
lib/: config.re  config.rei  dune  ls_error.re  ls_error.rei  utils.re  utils.rei
script/: install.sh  release-make-skeleton.js  release-postinstall.js
test/: dune  utils_test.re
test/support/: test_framework.re  test_runner.re
